--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,25 +8,26 @@
     tools:context="projet_commun.sciagoapp.LoginActivity">
 
 
-    <timotheeb.sciagoapp.Header
+    <projet_commun.sciagoapp.Header
         android:background="@drawable/cropped_background"
         android:layout_width="wrap_content"
-        android:layout_height="60.0dp" />
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="@dimen/header_height" />
 
     <!-- Login progress -->
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
+        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="10dp"
         android:visibility="gone" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
 
     <ScrollView
         android:id="@+id/login_form"
@@ -69,6 +70,7 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1" />
+                <!--android:imeActionId="@+id/login"-->
 
             </android.support.design.widget.TextInputLayout>
 
