--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     tools:context="projet_commun.sciagoapp.Header">
 
-    <timotheeb.sciagoapp.Header
+    <projet_commun.sciagoapp.Header
         android:background="@drawable/cropped_background"
         android:layout_width="wrap_content"
         android:layout_height="60.0dp" />
