--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -6,9 +6,17 @@
     android:layout_height="match_parent"
     tools:context="projet_commun.sciagoapp.Profile">
 
-    <timotheeb.sciagoapp.Header
+    <projet_commun.sciagoapp.Header
         android:background="@drawable/cropped_background"
         android:layout_width="wrap_content"
-        android:layout_height="60.0dp" />
+        android:layout_height="@dimen/header_height"
+         />
+
+    <TextView
+        android:id="@+id/txtView_1"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="30.0dp"
+        android:text="Profile" />
 
 </LinearLayout>
