--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,16 +23,10 @@
         android:layout_marginBottom="10dp"
         android:visibility="gone" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-
     <ScrollView
         android:id="@+id/login_form"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="347dp"
+        android:layout_height="488dp">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -85,7 +79,5 @@
 
         </LinearLayout>
     </ScrollView>
-
-    </LinearLayout>
 
 </LinearLayout>
