--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -7,13 +7,18 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_connect"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_connect" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_fund"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_fund" />
+
+    <item
+        android:id="@+id/navigation_reward"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_reward" />
 
 </menu>
