--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="projet_commun.sciagoapp.MainActivity">
+    tools:context="projet_commun.sciagoapp.ConnectActivity">
 
     <projet_commun.sciagoapp.Header
         android:id="@+id/header"
@@ -14,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/header_height" />
 
-    <!--TextView
+    <TextView
         android:layout_below="@+id/header"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
@@ -22,22 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="30.0dp"
         android:layout_marginTop="14.0dp"
-        android:text="@string/onglet_1" /-->
+        android:text="@string/onglet_3" />
 
-
-        <FrameLayout
-            android:layout_below="@id/header"
-            android:id="@+id/frame_fragmentholder"
-            android:layout_marginBottom="65dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </FrameLayout>
-
-    <!--android.support.design.widget.BottomNavigationView
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"/-->
-    
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
