--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,13 +11,29 @@
         android:background="@drawable/cropped_background"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/header_height"
-         />
+        android:id="@+id/header" />
+
 
     <TextView
         android:id="@+id/txtView_1"
-        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="30.0dp"
-        android:text="Profile" />
+        android:layout_below="@+id/header"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="14dp"
+        android:text="@string/onglet_1" />
 
-</LinearLayout>
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="65.0dp"
+        android:layout_alignParentBottom="true"
+
+        android:background="@color/colorOrangeLogo"
+        app:itemIconTint="@color/nav_item_state_list"
+        app:itemTextColor="@color/nav_item_state_list"
+        app:menu="@menu/bottom_navigation_items" />
+
+</RelativeLayout>
