--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#DC742C</color>  <!-- #FF4081 -->
     <color name="colorDark">#001020</color>
+    <color name="colorWhite">#FFFFFF</color>
     <color name="colorPrimary">#001020</color>
+    <color name="nav_item_state_list">@color/colorDark</color>
+    <color name="mainTabInactive">@color/colorDark</color>
+    <color name="mainTabActive">@color/colorWhite</color>
 </resources>
