--- a/app/src/main/res/layout/fragment_detail_fund.xml
+++ b/app/src/main/res/layout/fragment_detail_fund.xml
@@ -9,9 +9,9 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/textViewDetail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
+        android:layout_width="74dp"
+        android:layout_height="35dp"
+        android:text="@string/onglet_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
