update ListView CONNECT + ImageView

--- a/app/src/main/res/layout/list_researchers.xml
+++ b/app/src/main/res/layout/list_researchers.xml
@@ -7,7 +7,8 @@
     android:padding="5dip" >
 
     <!--  ListRow Left sied Thumbnail image -->
-    <LinearLayout android:id="@+id/thumbnail"
+    <LinearLayout
+        android:id="@+id/thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="3dip"
@@ -16,7 +17,7 @@
         android:layout_marginRight="5dip">
 
         <ImageView
-            android:id="@+id/list_image"
+            android:id="@+id/mainIcon"
             android:layout_width="50dip"
             android:layout_height="50dip"
             android:src="@drawable/ic_profile"/>
@@ -25,12 +26,12 @@
 
     <!-- Prénom NOM-->
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/mainTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/thumbnail"
         android:layout_toRightOf="@+id/thumbnail"
-        android:text="Daniel Diaz"
+        android:text="Title"
         android:textColor="@color/colorDark"
         android:typeface="sans"
         android:textSize="15dip"
@@ -38,15 +39,15 @@
 
     <!-- Fonction -->
     <TextView
-        android:id="@+id/artist"
+        android:id="@+id/mainDesc"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/title"
+        android:layout_below="@id/mainTitle"
         android:textColor="#343434"
         android:textSize="10dip"
         android:layout_marginTop="1dip"
         android:layout_toRightOf="@+id/thumbnail"
-        android:text="Enseignant chercheur ..." />
+        android:text="Description..." />
 
     <!-- Rightend Duration -->
     <TextView
@@ -54,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/title"
+        android:layout_alignTop="@id/mainTitle"
         android:gravity="right"
         android:text="5:45"
         android:layout_marginRight="5dip"
