--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -81,6 +81,7 @@
 
         <ListView
             android:id="@+id/connect_listView"
+            android:background="@color/colorGrey"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:listSelector="@drawable/list_selector">
