--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -19,7 +19,7 @@
 
     <SearchView
         android:background="@color/colorOrangeLogo"
-        android:id="@+id/searchView1"
+        android:id="@+id/searchViewChercheurs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10.0dp">
@@ -37,14 +37,19 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-
-        <Button
+        <!--Button
             android:id="@+id/buttonRecherche"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5.0dp"
             android:layout_weight="1"
-            android:text="@string/connect_btn_recherche"/>
+            android:text="@string/connect_btn_recherche"/-->
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3">
+        </Spinner>
 
         <Button
             android:id="@+id/buttonRechercheAvancee"
@@ -56,7 +61,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <!--LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -64,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         </Spinner>
-    </LinearLayout>
+    </LinearLayout-->
 
 
 
