--- a/app/src/main/res/layout/list_researchers.xml
+++ b/app/src/main/res/layout/list_researchers.xml
@@ -11,7 +11,7 @@
         android:id="@+id/thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="3dip"
+        android:padding="10dp"
         android:layout_alignParentLeft="true"
         android:background="@color/colorGrey"
         android:layout_marginRight="5dip">
@@ -50,7 +50,7 @@
         android:text="Description..." />
 
     <!-- Rightend Duration -->
-    <TextView
+    <!--TextView
         android:id="@+id/duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -61,7 +61,7 @@
         android:layout_marginRight="5dip"
         android:textSize="10dip"
         android:textColor="#10bcc9"
-        android:textStyle="bold"/>
+        android:textStyle="bold"/-->
 
     <!-- Rightend Arrow -->
     <ImageView
