--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -3,37 +3,82 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="projet_commun.sciagoapp.Profile">
+    tools:context="projet_commun.sciagoapp.MainActivity">
 
     <projet_commun.sciagoapp.Header
+        android:id="@+id/header"
         android:background="@drawable/cropped_background"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/header_height"
-        android:id="@+id/header" />
+        android:layout_height="@dimen/header_height" />
 
-
-    <TextView
-        android:id="@+id/txtView_1"
-        android:layout_width="wrap_content"
-        android:layout_height="30.0dp"
+    <!--TextView
         android:layout_below="@+id/header"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="14dp"
-        android:text="@string/onglet_1" />
+        android:id="@+id/txtView_1"
+        android:layout_width="wrap_content"
+        android:layout_height="30.0dp"
+        android:layout_marginTop="14.0dp"
+        android:text="@string/onglet_1" /-->
 
+    <FrameLayout
+        android:layout_below="@id/header"
+        android:id="@+id/frame_fragmentholder"
+        android:layout_marginBottom="65dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        app:layout_scrollFlags="scroll|enterAlways|snap">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".Profile"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Item Detail Here..."
+                android:textColor="#000"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description Here..."
+                android:textColor="#000"
+                android:textSize="15sp" />
+
+            <EditText
+                android:id="@+id/editTextChamp"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="150dp"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Contacter"/>
+        </LinearLayout>
+
+    </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="65.0dp"
         android:layout_alignParentBottom="true"
-
         android:background="@color/colorOrangeLogo"
-        app:itemIconTint="@color/nav_item_state_list"
-        app:itemTextColor="@color/nav_item_state_list"
+        app:itemIconTint="@animator/nav_item_state_list"
+        app:itemTextColor="@animator/nav_item_state_list"
         app:menu="@menu/bottom_navigation_items" />
 
 </RelativeLayout>
