--- a/app/src/main/res/layout/fragment_fund.xml
+++ b/app/src/main/res/layout/fragment_fund.xml
@@ -72,6 +72,18 @@
             android:id="@+id/fund_listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:elevation="8dp"
+            android:id="@+id/fab"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_gravity="bottom|end"
+            android:src="@drawable/ic_plus_mini"
+            android:layout_margin="16dp" />
     </FrameLayout>
+
+
+
 
 </LinearLayout>
